# tasktracker-django

./: .env.example  .gitignore  README.rst  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  run-linters.yml  sonarcloud.yml
assets/css/: main.min.css
assets/js/: main.bundle.js
docker/db/: init.sql  postgres.init.sql
tasks/: _fake_db.py  admin.py  apps.py  forms.py  mixins.py  models.py  permissions.py  resources.py  routes.py  serializers.py  tests.py  urls.py  views.py
tasks/fixtures/: tasks.xml
tasks/migrations/: 0001_add_task_model.py  0001_initial.py  0002_add_uuid_field.py  0002_update_meta.py  0003_populate_uuid_vals.py  0004_change_pk_uuid.py  0005_change_uuid_default.py  0006_update_task_meta.py
tasks/templates/tasks/: _actions.html  _task_tr.html  task_detail.html  task_form.html  task_list.html
tasks/templates/widgets/: modal_task_delete.html  pagination.html  task_list_group.html  task_row.html
tasks/templatetags/: tasks.py
tasks/tests/: test_templatetags.py  test_views.py
tasks/tests/integration/: test_create_view.py  test_delete_view.py  test_detail_api.py  test_detail_view.py  test_list_api.py  test_list_view.py  test_update_view.py  test_views.py
tasks/tests/unit/: test_admin.py  test_models.py  test_serializers.py  test_views.py  test_viewsets.py
tasktracker/: asgi.py  settings.py  test_views.py  urls.py  wsgi.py
templates/: _navbar.html  base.html  profile.html  signin.html  signup.html  task_detail.html  task_form.html  task_list.html
users/: admin.py  apps.py  forms.py  models.py  resources.py  routes.py  serializers.py  tests.py  urls.py  views.py
users/fixtures/: tokens.json  users.json
users/migrations/: 0001_initial.py  0002_add_image_field.py  0002_check_emails.py  0003_change_email.py  0004_add_image.py
users/templates/auth/: signin.html  signup.html
users/templates/users/: profile.html
users/tests/: test_views.py
users/tests/integration/: test_auth_api.py  test_profile_view.py  test_sign_in.py  test_sign_out.py  test_sign_up.py  (+1 more)
(+7 files in other folders)
