[tool.poetry]
name = "tasktracker-django"
version = "1.1.0"
description = "the demo django project for education purposes - todo app"
authors = ["Serhii Horodilov <sgorodil@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/edu-python-course/tasktracker-django"
keywords = [
    "python",
    "django",
    "djangorestframework",
    "web",
    "development",
    "training",
    "education",
]
classifiers = [
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Topic :: Education",
]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pillow = "^10.2.0"

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
